--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "meanjs",
+	"name": "appmaker",
 	"description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js.",
-	"version": "0.3.3",
+	"version": "0.0.2",
 	"private": false,
 	"author": "https://github.com/meanjs/mean/graphs/contributors",
 	"repository": {
